change some icons

--- a/src/components/AddDebt.css
+++ b/src/components/AddDebt.css
@@ -13,7 +13,7 @@
   text-align: right;
 }
 .debtTable{
-  border: solid 1px;
+  border: solid 1px green;
   border-radius: 15px;
   margin-top: 5px;
   margin-bottom: 5px;
