handle error in addDebt,  show created time for each debt

--- a/src/components/AddDebt.css
+++ b/src/components/AddDebt.css
@@ -12,6 +12,9 @@
 .debtCreditor{
   text-align: right;
 }
+.debtCreateAt{
+  text-align: right;
+}
 .debtTable{
   border: solid 1px green;
   border-radius: 15px;
